--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мой ToDo лист</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -13,7 +14,7 @@
 
   <header class="header">
     <div class="header__conteiner conteiner">
-      <h1> Список дел</h1>
+      <h1 class="animate__animated animate__zoomInDown"> Список дел</h1>
     </div>
   </header>
   <main class="main">
@@ -23,7 +24,7 @@
         <button class="main__btn-add">Добавить дело</button>
       </div>
       <div class="main__todo-list">
-        <ul class="main__list">
+        <ul class="main__list animate__animated animate__bounceInUp">
 
         </ul>
       </div>
